--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -15,29 +15,26 @@ jobs:
         with:
           node-version: 18.x
 
-      - name: Inside DevSecOps Project
-        run: cd dev-sec-ops
-
       - name: Install Ionic
-        run: npm install -g @ionic/cli
+        run: cd dev-sec-ops && npm install -g @ionic/cli
 
       - name: Install npm dependencies
-        run: npm install --force
+        run: cd dev-sec-ops && npm install --force
       
       - name: Build Ionic Web assets
-        run: ionic build
+        run: cd dev-sec-ops && ionic build
 
       - name: Sync Ionic Web assets
-        run: npx jetify && npx cap sync android
+        run: cd dev-sec-ops && npx jetify && npx cap sync android
 
       # - name: Move Certificates
       #   run: mkdir -p android/capacitor-cordova-android-plugins/src/main/assets/www/ && cp -r android/app/src/main/assets/public/certificates android/capacitor-cordova-android-plugins/src/main/assets/www/certificates
       
       - name: Increment Version
-        run: npm run cap:config
+        run: cd dev-sec-ops && npm run cap:config
 
       - name: Create release build
-        run: cd android && ./gradlew assembleRelease && cd ..
+        run: cd dev-sec-ops && cd android && ./gradlew assembleRelease && cd ..
             
       - name: Zipalign & Sign apk
         uses: r0adkll/sign-android-release@v1
@@ -51,7 +48,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: android-build
-          path: android/app/build/outputs/apk/release/app-release-unsigned-signed.apk
+          path: dev-sec-ops/android/app/build/outputs/apk/release/app-release-unsigned-signed.apk
       
       - run: |
           sudo mkdir -p /home/runner/work/_temp/_github_home
@@ -65,7 +62,7 @@ jobs:
       - name: Run MobSF Analysis
         uses: fundacaocerti/mobsf-action@v1.7.1
         env:
-          INPUT_FILE_NAME: android/app/build/outputs/apk/release/app-release-unsigned-signed.apk
+          INPUT_FILE_NAME: dev-sec-ops/android/app/build/outputs/apk/release/app-release-unsigned-signed.apk
           SCAN_TYPE: apk
           OUTPUT_FILE_NAME: mobsf-report
 
