--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -9,7 +9,13 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v2
-
+       
+      - name: Set up Java
+        uses: actions/setup-java@v2
+        with:
+          distribution: "temurin"
+          java-version: 17
+          
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
