--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -11,10 +11,9 @@ jobs:
         uses: actions/checkout@v2
        
       - name: Set up Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v1
         with:
-          distribution: "temurin"
-          java-version: 17
+          java-version: '1.8'
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
