--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v1
         with:
-          java-version: '1.8'
+          java-version: '12.x'
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
