--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -11,9 +11,9 @@ jobs:
         uses: actions/checkout@v2
        
       - name: Set up Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: '12.x'
+          java-version: 17
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
