--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -11,8 +11,9 @@ jobs:
         uses: actions/checkout@v2
        
       - name: Set up Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: "temurin"
           java-version: 17
 
       - name: Setup Node.js
@@ -65,7 +66,7 @@ jobs:
           REPO_NAME: ${{ github.event.repository.name }}
           
       - name: Run MobSF Analysis
-        uses: fundacaocerti/mobsf-action@v1.7.1
+        uses: fundacaocerti/mobsf-action@v1.7.2
         env:
           INPUT_FILE_NAME: dev-sec-ops/android/app/build/outputs/apk/release/app-release-unsigned-signed.apk
           SCAN_TYPE: apk
