--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -63,8 +63,13 @@ jobs:
           sudo mkdir -p /home/runner/work/$REPO_NAME/$REPO_NAME
           sudo chown -R 9901:9901 /home/runner/work/$REPO_NAME/$REPO_NAME
         env:
-          REPO_NAME: ${{ github.event.repository.name }}
-          
+          REPO_NAME: ${{ github.event.repository.name }}\
+
+      - name: Set-up Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'  
+            
       - name: Run MobSF Analysis
         uses: fundacaocerti/mobsf-action@v1.7.1
         env:
