--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -56,10 +56,11 @@ jobs:
           name: android-build
           path: dev-sec-ops/android/app/build/outputs/apk/release/app-release-unsigned-signed.apk
       
-      - run: |
+      - name: Fix Permissions for MobSF Docker
+        run: |
+          set -e
           sudo mkdir -p /home/runner/work/_temp/_github_home
           sudo chown -R 9901:9901 /home/runner/work/_temp/_github_home
-
           sudo mkdir -p /home/runner/work/$REPO_NAME/$REPO_NAME
           sudo chown -R 9901:9901 /home/runner/work/$REPO_NAME/$REPO_NAME
         env:
@@ -69,13 +70,21 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '12.x'  
-            
+
       - name: Run MobSF Analysis
-        uses: fundacaocerti/mobsf-action@v1.7.1
+        uses: fundacaocerti/mobsf-action@1.7.1
         env:
           INPUT_FILE_NAME: dev-sec-ops/android/app/build/outputs/apk/release/app-release-unsigned-signed.apk
           SCAN_TYPE: apk
           OUTPUT_FILE_NAME: mobsf-report
+
+      - name: Cleanup MobSF Permissions
+        run: |
+          set -e
+          sudo chown -R runner:docker /home/runner/work/_temp/_github_home
+          sudo chown -R runner:docker /home/runner/work/$REPO_NAME/$REPO_NAME
+        env:
+          REPO_NAME: ${{ github.event.repository.name }} 
 
       - name: Upload MobSF Analysis PDF Result
         uses: actions/upload-artifact@v2
