--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -42,13 +42,13 @@ jobs:
       - name: Create release build
         run: cd dev-sec-ops && cd android && ./gradlew assembleRelease && cd ..
             
-      - name: Zipalign & Sign apk
-        uses: r0adkll/sign-android-release@v1
-        with:
-          releaseDirectory: dev-sec-ops/android/app/build/outputs/apk/release
-          signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }} 
-          alias: ${{ secrets.ANDROID_ALIAS }}
-          keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+      # - name: Zipalign & Sign apk
+      #   uses: r0adkll/sign-android-release@v1
+      #   with:
+      #     releaseDirectory: dev-sec-ops/android/app/build/outputs/apk/release
+      #     signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }} 
+      #     alias: ${{ secrets.ANDROID_ALIAS }}
+      #     keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
 
       - name: Upload dev APK
         uses: actions/upload-artifact@v1
