--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -10,28 +10,28 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v2
        
-      - name: Set up Java
-        uses: actions/setup-java@v2
-        with:
-          distribution: "temurin"
-          java-version: 17
+      # - name: Set up Java
+      #   uses: actions/setup-java@v2
+      #   with:
+      #     distribution: "temurin"
+      #     java-version: 17
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
+      # - name: Setup Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 18.x
 
-      - name: Install Ionic
-        run: npm install -g @ionic/cli
+      # - name: Install Ionic
+      #   run: npm install -g @ionic/cli
 
-      - name: Install npm dependencies
-        run: npm install --force
+      # - name: Install npm dependencies
+      #   run: npm install --force
       
-      - name: Build Ionic Web assets
-        run: ionic build
+      # - name: Build Ionic Web assets
+      #   run: ionic build
 
-      - name: Sync Ionic Web assets
-        run: npx cap sync android
+      # - name: Sync Ionic Web assets
+      #   run: npx cap sync android
 
       # - name: Move Certificates
       #   run: mkdir -p android/capacitor-cordova-android-plugins/src/main/assets/www/ && cp -r android/app/src/main/assets/public/certificates android/capacitor-cordova-android-plugins/src/main/assets/www/certificates
@@ -39,8 +39,8 @@ jobs:
       # - name: Increment Version
       #   run: npm run cap:config
 
-      - name: Create release build
-        run: cd android && ./gradlew assembleRelease && cd ..
+      # - name: Create release build
+      #   run: cd android && ./gradlew assembleRelease && cd ..
             
       # - name: Zipalign & Sign apk
       #   uses: r0adkll/sign-android-release@v1
@@ -54,7 +54,8 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: android-build
-          path: android/app/build/outputs/apk/release/app-release-unsigned.apk
+          # path: android/app/build/outputs/apk/release/app-release-unsigned.apk
+          path: android/app-release-unsigned.apk
       
       - name: Fix Permissions for MobSF Docker
         run: |
@@ -74,7 +75,8 @@ jobs:
       - name: Run MobSF Analysis
         uses: fundacaocerti/mobsf-action@v1.7.1
         env:
-          INPUT_FILE_NAME: android/app/build/outputs/apk/release/app-release-unsigned.apk
+          # INPUT_FILE_NAME: android/app/build/outputs/apk/release/app-release-unsigned.apk
+          INPUT_FILE_NAME: android/app-release-unsigned.apk
           SCAN_TYPE: apk
           OUTPUT_FILE_NAME: mobsf-report
 
