--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -62,6 +62,7 @@ jobs:
           set -e
           sudo mkdir -p /home/runner/work/_temp/_github_home
           sudo chown -R 9901:9901 /home/runner/work/_temp/_github_home
+
           sudo mkdir -p /home/runner/work/$REPO_NAME/$REPO_NAME
           sudo chown -R 9901:9901 /home/runner/work/$REPO_NAME/$REPO_NAME
         env:
@@ -72,21 +73,21 @@ jobs:
         with:
           java-version: '12.x'  
 
-      - name: Run Extra Commands
-        run: |
-          set -e
-          sudo mkdir -p /home/runner/work/_temp/_github_home
-          sudo chown -R 9901:9901 /home/runner/work/_temp/_github_home
-          sudo mkdir -p /home/runner/work/$REPO_NAME/$REPO_NAME
-          sudo chown -R 9901:9901 /home/runner/work/$REPO_NAME/$REPO_NAME
-
       - name: Run MobSF Analysis
-        uses: fundacaocerti/mobsf-action@v1.5
+        uses: fundacaocerti/mobsf-action@latest
         env:
           # INPUT_FILE_NAME: android/app/build/outputs/apk/release/app-release-unsigned.apk
           INPUT_FILE_NAME: android/app-release-unsigned.apk
           SCAN_TYPE: apk
           OUTPUT_FILE_NAME: mobsf-report
+
+      - name: Cleanup MobSF Permissions
+        run: |
+          set -e
+          sudo chown -R runner:docker /home/runner/work/_temp/_github_home
+          sudo chown -R runner:docker /home/runner/work/$REPO_NAME/$REPO_NAME
+        env:
+          REPO_NAME: ${{ github.event.repository.name }}
 
       - name: Upload MobSF Analysis PDF Result
         uses: actions/upload-artifact@v2
