--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -9,7 +9,15 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v2
-       
+
+      - id: run-action
+        uses: sobelow/action@v1
+        with:
+          flags: '-i Config'
+      - uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: results.sarif
+          
       # - name: Set up Java
       #   uses: actions/setup-java@v2
       #   with:
