--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -7,14 +7,25 @@ jobs:
     name: Android Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - id: run-action
-        uses: sobelow/action@v1
+      - name: Install ESLint
+        run: |
+          npm install eslint@8.10.0
+          npm install @microsoft/eslint-formatter-sarif@2.1.7
+
+      - name: Run ESLint
+        run: npx eslint .
+          --config .eslintrc.js
+          --ext .js,.jsx,.ts,.tsx
+          --format @microsoft/eslint-formatter-sarif
+          --output-file eslint-results.sarif
+        continue-on-error: true
+
+      - name: Upload analysis results to GitHub
+        uses: github/codeql-action/upload-sarif@v2
         with:
-          flags: '-i Config'
-      - uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: results.sarif
+          sarif_file: eslint-results.sarif
+          wait-for-processing: true
+          
       # - name: Checkout source
       #   uses: actions/checkout@v2
 
