--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -6,6 +6,10 @@ jobs:
   android-build:
     name: Android Build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
       - name: Install ESLint
         run: |
@@ -25,7 +29,7 @@ jobs:
         with:
           sarif_file: eslint-results.sarif
           wait-for-processing: true
-          
+
       # - name: Checkout source
       #   uses: actions/checkout@v2
 
