--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -11,6 +11,9 @@ jobs:
       security-events: write
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
+      - name: Checkout source
+        uses: actions/checkout@v2
+
       - name: Install ESLint
         run: |
           npm install eslint@8.10.0
@@ -28,9 +31,6 @@ jobs:
         with:
           sarif_file: eslint-results.sarif
           wait-for-processing: true
-
-      # - name: Checkout source
-      #   uses: actions/checkout@v2
 
       # - name: Initialize CodeQL
       #   uses: github/codeql-action/init@v2
