--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -16,20 +16,20 @@ jobs:
 
       - name: Install npm dependencies
         run: npm install --force
-        
+
       - name: Run ESLint
         run: npx eslint .
           --config .eslintrc.js
           --ext .js,.jsx,.ts,.tsx
           --format html
-          --output-file eslint-results.sarif
+          --output-file eslint-reports.html
         continue-on-error: true
 
       - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v2
+        uses: actions/upload-artifact@v2
         with:
-          sarif_file: eslint-results.sarif
-          wait-for-processing: true
+          name: eslint-reports.html
+          path: eslint-reports.html
 
       # - name: Initialize CodeQL
       #   uses: github/codeql-action/init@v2
