--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -31,16 +31,7 @@ jobs:
           name: eslint-reports.html
           path: eslint-reports.html
 
-      # - name: Initialize CodeQL
-      #   uses: github/codeql-action/init@v2
-
-      # - name: Perform CodeQL Analysis
-      #   uses: github/codeql-action/analyze@v2
-
-
-      # - name: Upload SARIF file
-      #   uses: github/codeql-action/upload-sarif@v2
-          
+     
       # - name: Set up Java
       #   uses: actions/setup-java@v2
       #   with:
@@ -80,38 +71,36 @@ jobs:
       #     alias: ${{ secrets.ANDROID_ALIAS }}
       #     keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
 
-      # - name: Upload dev APK
-      #   uses: actions/upload-artifact@v1
-      #   with:
-      #     name: android-build
-      #     # path: android/app/build/outputs/apk/release/app-release-unsigned.apk
-      #     path: android/app-release-unsigned.apk
+      - name: Upload dev APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: android-build
+          # path: android/app/build/outputs/apk/release/app-release-unsigned.apk
+          path: android/app-release-unsigned.apk
       
-      # - name: Fix Permissions for MobSF Docker
-      #   run: |
-      #     set -e
-      #     sudo mkdir -p /home/runner/work/_temp/_github_home
-      #     sudo chown -R 9901:9901 /home/runner/work/_temp/_github_home
+      - name: Fix Permissions for MobSF Docker
+        run: |
+          set -e
+          sudo mkdir -p /home/runner/work/_temp/_github_home
+          sudo chown -R 9901:9901 /home/runner/work/_temp/_github_home
 
-      #     sudo mkdir -p /home/runner/work/$REPO_NAME/$REPO_NAME
-      #     sudo chown -R 9901:9901 /home/runner/work/$REPO_NAME/$REPO_NAME
-      #   env:
-      #     REPO_NAME: ${{ github.event.repository.name }}\
+          sudo mkdir -p /home/runner/work/$REPO_NAME/$REPO_NAME
+          sudo chown -R 9901:9901 /home/runner/work/$REPO_NAME/$REPO_NAME
+        env:
+          REPO_NAME: ${{ github.event.repository.name }}\
 
-      # - name: Set-up Java
-      #   uses: actions/setup-java@v1
-      #   with:
-      #     java-version: '12.x'  
+      - name: Set-up Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'  
 
-      # - name: Run MobSF Analysis
-      #   uses: fundacaocerti/mobsf-action@v1.7.1
-      #   env:
-      #     # INPUT_FILE_NAME: android/app/build/outputs/apk/release/app-release-unsigned.apk
-      #     INPUT_FILE_NAME: android/app-release-unsigned.apk
-      #     SCAN_TYPE: apk
-      #     OUTPUT_FILE_NAME: mobsf-report
-      #   run:
-      #     JAVA_DIRECTORY
+      - name: Run MobSF Analysis
+        uses: fundacaocerti/mobsf-action@v1.7.1
+        env:
+          # INPUT_FILE_NAME: android/app/build/outputs/apk/release/app-release-unsigned.apk
+          INPUT_FILE_NAME: android/app-release-unsigned.apk
+          SCAN_TYPE: apk
+          OUTPUT_FILE_NAME: mobsf-report
 
 
 
