--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -77,7 +77,10 @@ jobs:
           name: android-build
           # path: android/app/build/outputs/apk/release/app-release-unsigned.apk
           path: android/app-release-unsigned.apk
-      
+
+      - name: Setup Python 
+        uses: actions/setup-python@v4 
+
       - name: Fix Permissions for MobSF Docker
         run: |
           set -e
@@ -86,6 +89,7 @@ jobs:
 
           sudo mkdir -p /home/runner/work/$REPO_NAME/$REPO_NAME
           sudo chown -R 9901:9901 /home/runner/work/$REPO_NAME/$REPO_NAME
+          sed -i 's/hello/hellovaibhav/g' test.html
         env:
           REPO_NAME: ${{ github.event.repository.name }}\
 
