--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -71,42 +71,51 @@ jobs:
       #     alias: ${{ secrets.ANDROID_ALIAS }}
       #     keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
 
-      - name: Upload dev APK
-        uses: actions/upload-artifact@v1
+      # - name: Upload dev APK
+      #   uses: actions/upload-artifact@v1
+      #   with:
+      #     name: android-build
+      #     # path: android/app/build/outputs/apk/release/app-release-unsigned.apk
+      #     path: android/app-release-unsigned.apk
+
+      # - name: Setup Python 
+      #   uses: actions/setup-python@v4 
+
+      # - name: Fix Permissions for MobSF Docker
+      #   run: |
+      #     set -e
+      #     sudo mkdir -p /home/runner/work/_temp/_github_home
+      #     sudo chown -R 9901:9901 /home/runner/work/_temp/_github_home
+
+      #     sudo mkdir -p /home/runner/work/$REPO_NAME/$REPO_NAME
+      #     sudo chown -R 9901:9901 /home/runner/work/$REPO_NAME/$REPO_NAME
+      #     sed -i 's/hello/hellovaibhav/g' test.html
+      #   env:
+      #     REPO_NAME: ${{ github.event.repository.name }}\
+
+      # - name: Set-up Java
+      #   uses: actions/setup-java@v1
+      #   with:
+      #     java-version: '12.x'  
+
+      # - name: Run MobSF Analysis
+      #   uses: fundacaocerti/mobsf-action@v1.7.1
+      #   env:
+      #     # INPUT_FILE_NAME: android/app/build/outputs/apk/release/app-release-unsigned.apk
+      #     INPUT_FILE_NAME: android/app-release-unsigned.apk
+      #     SCAN_TYPE: apk
+      #     OUTPUT_FILE_NAME: mobsf-report
+      
+     
+      - name: mobsfscan
+        uses: MobSF/mobsfscan@main
         with:
-          name: android-build
-          # path: android/app/build/outputs/apk/release/app-release-unsigned.apk
-          path: android/app-release-unsigned.apk
+          args: '. --sarif --output results.sarif || true'
 
-      - name: Setup Python 
-        uses: actions/setup-python@v4 
-
-      - name: Fix Permissions for MobSF Docker
-        run: |
-          set -e
-          sudo mkdir -p /home/runner/work/_temp/_github_home
-          sudo chown -R 9901:9901 /home/runner/work/_temp/_github_home
-
-          sudo mkdir -p /home/runner/work/$REPO_NAME/$REPO_NAME
-          sudo chown -R 9901:9901 /home/runner/work/$REPO_NAME/$REPO_NAME
-          sed -i 's/hello/hellovaibhav/g' test.html
-        env:
-          REPO_NAME: ${{ github.event.repository.name }}\
-
-      - name: Set-up Java
-        uses: actions/setup-java@v1
+      - name: Upload mobsfscan report
+        uses: github/codeql-action/upload-sarif@v2
         with:
-          java-version: '12.x'  
-
-      - name: Run MobSF Analysis
-        uses: fundacaocerti/mobsf-action@v1.7.1
-        env:
-          # INPUT_FILE_NAME: android/app/build/outputs/apk/release/app-release-unsigned.apk
-          INPUT_FILE_NAME: android/app-release-unsigned.apk
-          SCAN_TYPE: apk
-          OUTPUT_FILE_NAME: mobsf-report
-
-
+          sarif_file: results.sarif
 
       # - name: Cleanup MobSF Permissions
       #   run: |
