--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -110,13 +110,18 @@ jobs:
       - name: mobsfscan
         uses: MobSF/mobsfscan@main
         with:
-          args: '. --sarif --output results.sarif || true'
+          args: '. --sarif --output results.pdf || true'
 
-      - name: Upload mobsfscan report
-        uses: github/codeql-action/upload-sarif@v2
+      # - name: Upload mobsfscan report
+      #   uses: github/codeql-action/upload-sarif@v2
+      #   with:
+      #     sarif_file: results.sarif
+
+      - name: Upload MobSF Analysis JSON Result
+        uses: actions/upload-artifact@v2
         with:
-          sarif_file: results.sarif
-
+          name: results.pdf
+          path: results.pdf    
       # - name: Cleanup MobSF Permissions
       #   run: |
       #     set -e
