--- a/.github/workflows/build_dev_android.yml
+++ b/.github/workflows/build_dev_android.yml
@@ -2,17 +2,19 @@ name: "Build - Dev Android Mobile App"
 on:
   push:
     branches: [ "dev" ]
+  pull_request:
+      types: [opened, synchronize, reopened] 
 jobs:
-  android-build:
-    name: Android Build
+  lint-report:
+    name: Lint Report
     runs-on: ubuntu-latest
     permissions:
       contents: read
       security-events: write
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      actions: read
     steps:
       - name: Checkout source
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2  
 
       - name: Install npm dependencies
         run: npm install --force
@@ -31,6 +33,33 @@ jobs:
           name: eslint-reports.html
           path: eslint-reports.html
 
+  sast-report:
+    name: SAST Report
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+      actions: read 
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v2
+
+      - name: mobsfscan
+        uses: MobSF/mobsfscan@main
+        with:
+          args: '. --html --output vapt.html || true'
+
+      # - name: Upload mobsfscan report
+      #   uses: github/codeql-action/upload-sarif@v2
+      #   with:
+      #     sarif_file: results.sarif
+
+      - name: Upload MobSF Analysis JSON Result
+        uses: actions/upload-artifact@v2
+        with:
+          name: vapt.html
+          path: vapt.html    
+          
       - name: ChatGTP explain code
         uses: cirolini/chatgpt-github-actions@v1.3
         with:
@@ -117,21 +146,7 @@ jobs:
       #     OUTPUT_FILE_NAME: mobsf-report
       
      
-      - name: mobsfscan
-        uses: MobSF/mobsfscan@main
-        with:
-          args: '. --html --output vapt.html || true'
-
-      # - name: Upload mobsfscan report
-      #   uses: github/codeql-action/upload-sarif@v2
-      #   with:
-      #     sarif_file: results.sarif
-
-      - name: Upload MobSF Analysis JSON Result
-        uses: actions/upload-artifact@v2
-        with:
-          name: vapt.html
-          path: vapt.html    
+     
 
       # - name: Cleanup MobSF Permissions
       #   run: |
